force-app/main/default/objects/Emplyee__c/Emplyee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee_Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>