force-app/main/default/objects/Emplyee__c/fields/Number_of_Project_worked_on__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Project_worked_on__c</fullName>
    <label>Number of Project worked on</label>
    <summaryForeignKey>Employee_effort__c.Employee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>