force-app/main/default/objects/Emplyee__c/fields/Salary_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Salary_Percentage__c</fullName>
    <formula>Salary__c  *( 10.0/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary_Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>