force-app/main/default/objects/Emplyee__c/fields/Total_Hour_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hour_Worked__c</fullName>
    <label>Total Hour Worked</label>
    <summarizedField>Employee_effort__c.Hour_Worked__c</summarizedField>
    <summaryForeignKey>Employee_effort__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>